Fix CTA visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -219,7 +219,7 @@ img{
 	justify-content: space-between;
 	padding: 55px 40px 37px;
 	border-radius: 12px;
-	box-shadow: 0 0 20px rgba(121, 119, 119, 0.1);
+	box-shadow: 0 0 20px rgba(17, 16, 16, 0.1);
 }
 
 .feature-item:not(:last-child){
@@ -289,7 +289,7 @@ img{
 	text-align: center;
 	background-color: white;
 	border-radius: 12px;
-	-shadow: 0 0 20px rgba(0, 0, 0, 0.1);box
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
 .cta.container{
